--- a/CastleActiveRecord/CastleActiveRecord.csproj
+++ b/CastleActiveRecord/CastleActiveRecord.csproj
@@ -107,6 +107,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Entity\ClassDiagram1.cd" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
